fix: Fixed z-index bug

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,14 +1,10 @@
 .fixed-header {
-    position: fixed;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 109px;
     background-color: #004186;
     color: white;
     display: flex;
     align-items: center;
-    z-index: 1;
   }
   
   .fixed-header .container {
