--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 :root {
   --blue-intense: #004186;
   --white: #fff;
@@ -8,7 +15,4 @@
   --bg: #ebebeb;
   --gray-intense: #d9d9d9;
   --gray-easy: #ebe9e9;
-}
-* {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
